overlays/uksouth-tools/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: grafana
  sessionAffinity: None
