overlays/uksouth-tools/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: grafana
  name: grafana
  namespace: grafana
spec:
  rules:
    - host: grafana.tools.uksouth.bink.sh
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.tools.uksouth.bink.sh
